@@ -232,13 +232,13 @@ public class FromQueueToPackagesTest extends AbstractPrintingTest
 		assertThat(printJobs).as("Invalid Print Jobs count").hasSize(2);
 
 		// Validate PrintJob 1
-		final I_C_Print_Job printJob1 = printJobs.get(0);
+		final I_C_Print_Job printJob1 = printJobs.getFirst();
 		{
 			final List<I_C_Print_Job_Line> lines = IteratorUtils.toList(helper.getDAO().retrievePrintJobLines(printJob1));
 			Assertions.assertEquals(1, lines.size(), "Job1 - Only one line was expected for " + printJob1);
 
-			final I_C_Print_Job_Line line = lines.get(0);
-			final I_C_Print_Job_Detail detail = helper.getDAO().retrievePrintJobDetails(line).get(0);
+			final I_C_Print_Job_Line line = lines.getFirst();
+			final I_C_Print_Job_Detail detail = helper.getDAO().retrievePrintJobDetails(line).getFirst();
 			Assertions.assertEquals(routing1.getAD_PrinterRouting_ID(), detail.getAD_PrinterRouting_ID(), "Job1 - Invalid routing used");
 		}
 		// Validate PrintJob 2
@@ -247,8 +247,8 @@ public class FromQueueToPackagesTest extends AbstractPrintingTest
 			final List<I_C_Print_Job_Line> lines = IteratorUtils.toList(helper.getDAO().retrievePrintJobLines(printJob2));
 			Assertions.assertEquals(1, lines.size(), "Job2 - Only one line was expected for " + printJob2);
 
-			final I_C_Print_Job_Line line = lines.get(0);
-			final I_C_Print_Job_Detail detail = helper.getDAO().retrievePrintJobDetails(line).get(0);
+			final I_C_Print_Job_Line line = lines.getFirst();
+			final I_C_Print_Job_Detail detail = helper.getDAO().retrievePrintJobDetails(line).getFirst();
 			Assertions.assertEquals(routing2.getAD_PrinterRouting_ID(), detail.getAD_PrinterRouting_ID(), "Job2 - Invalid routing used");
 		}
 
