@@ -53,7 +53,7 @@ public class TestDoubleShipmentsInvoiceJustOne extends AbstractDoubleReceiptQtyO
 			.as("We are expecting one invoice: %s", invoices)
 			.hasSize(1);
 
-		final IInvoiceHeader invoice1 = invoices.remove(0);
+		final IInvoiceHeader invoice1 = invoices.removeFirst();
 
 		assertThat(invoice1.getPOReference()).isEqualTo(IC_PO_REFERENCE);
 		assertThat(invoice1.getDateAcct()).isEqualTo(IC_DATE_ACCT);
